<resources>
    <string name="app_name">Netchmap</string>
    <string name="login_title">A new way to find everything</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>

    <string name="Main_name">prueba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Cambiar contraseña</string>
    <string name="menu_gallery">Reportar error</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_close">Log out</string>
    <string name="menu_send">Send</string>
</resources>
